wrapped up the javascript to make sure it was functioning the way we would exprect

--- a/styles/base/reset.css
+++ b/styles/base/reset.css
@@ -19,6 +19,8 @@ time, mark, audio, video {
     font-size: 100%;
     vertical-align: baseline;
     box-sizing: border-box;
+    list-style: none;
+    text-decoration: none;
 }
 
 
