--- a/styles/views/landing.css
+++ b/styles/views/landing.css
@@ -34,15 +34,15 @@
 }
 
 .todo-main-container {
-margin-top: 60px;
-}
-
-.todo-container {
-    width: 80%;
-    padding: 20px 0;
+    margin-top: 60px;
     display: flex;
-    margin: auto;
-    border-bottom: 1px solid #FFFFFF;
+    justify-content: space-around;
+}
+.progress-box {
+    width:40%;
+    display: inline-block;
+    text-align: center;
+    color: #fff;
 }
 
 .todo-img-container {
@@ -108,6 +108,7 @@ margin-top: 60px;
     background: none;
     padding-left: 20px;
     font-size: 14px;
+    color: #fff;
 }
 
 .form-input:placeholder{
@@ -160,4 +161,12 @@ margin-top: 60px;
     top: 20px;
     width: 20px;
     cursor: pointer;
+}
+
+.list-group {
+    margin-top: 15px;
+}
+
+.list-group-item {
+    color: #fff;
 }
